# openhrp-talos

./: CMakeLists.txt
model/: ankle_X_collision.wrl  ankle_Y_lo_res.wrl  ankle_Y_lo_res_mirror_Y_v2.wrl  arm_1_collision.wrl  arm_1_collision_mirror_Y_v2.wrl  arm_2_collision.wrl  arm_2_collision_mirror_Y_v2.wrl  arm_3_collision.wrl  arm_3_collision_mirror_Y_v2.wrl  arm_4_collision.wrl  arm_4_collision_mirror_Y_v2.wrl  arm_5_collision.wrl  arm_5_collision_mirror_Y_v2.wrl  arm_6_collision.wrl  arm_6_collision_mirror_Y_v2.wrl  arm_7_collision.wrl  arm_7_collision_mirror_Y_v2.wrl  base_link_collision.wrl  head_1_collision.wrl  head_2_collision.wrl  hip_x_lo_res.wrl  hip_x_lo_res_mirror_Y_v2.wrl  hip_y_lo_res.wrl  hip_y_lo_res_mirror_Y_v2.wrl  hip_z_lo_res.wrl  hip_z_lo_res_mirror_Y_v2.wrl  knee_lo_res.wrl  knee_lo_res_mirror_Y_v2.wrl  pyren_full.body  pyren_full.wrl  torso_1.wrl  torso_2_collision.wrl
model/fromurdf/: talos-arm_left_1_link-talos-arm_left_1_link_visual.wrl  talos-arm_left_2_link-talos-arm_left_2_link_visual.wrl  talos-arm_left_3_link-talos-arm_left_3_link_visual.wrl  talos-arm_left_4_link-talos-arm_left_4_link_visual.wrl  talos-arm_left_6_link-talos-arm_left_6_link_visual.wrl  talos-arm_left_7_link-talos-arm_left_7_link_fixed_joint_lump__gripper_left_base_link_visual_3.wrl  talos-arm_right_5_link-talos-arm_right_5_link_visual.wrl  talos-arm_right_7_link-talos-arm_right_7_link_visual.wrl  talos-base_link-talos-base_link_visual.wrl  talos-gripper_left_fingertip_1_link-talos-gripper_left_fingertip_1_link_visual.wrl  talos-gripper_left_inner_double_link-talos-gripper_left_inner_double_link_visual.wrl  talos-gripper_left_inner_single_link-talos-gripper_left_inner_single_link_visual.wrl  talos-gripper_left_motor_single_link-talos-gripper_left_motor_single_link_visual.wrl  talos-gripper_right_motor_double_link-talos-gripper_right_motor_double_link_visual.wrl  talos-head_1_link-talos-head_1_link_visual.wrl  talos-head_2_link-talos-head_2_link_fixed_joint_lump__rgbd_link_visual_1.wrl  talos-head_2_link-talos-head_2_link_visual.wrl  talos-leg_left_1_link-talos-leg_left_1_link_visual.wrl  talos-leg_left_6_link-talos-leg_left_6_link_visual.wrl  talos-leg_right_2_link-talos-leg_right_2_link_visual.wrl  talos-leg_right_3_link-talos-leg_right_3_link_visual.wrl  talos-leg_right_4_link-talos-leg_right_4_link_visual.wrl  talos-leg_right_5_link-talos-leg_right_5_link_visual.wrl  talos-torso_1_link-talos-torso_1_link_visual.wrl  talos-torso_2_link-talos-torso_2_link_visual.wrl  talos_full_v2-project.cnoid  talos_full_v2-project.xml  talos_full_v2.wrl
project/: CMakeLists.txt  simulationMode.xml.in  sp-test-pyren.sh  sp-test.sh
scheduler/: CMakeLists.txt  scheduler-talos-bush.sh.in  scheduler-talos.sh.in  schedulerproject-sqp-talos-bush.sh.in  schedulerproject-talos-bush.sh.in  schedulerproject-talos.sh.in
server/: CMakeLists.txt
server/SotController/: CMakeLists.txt  Controller_impl.h  Controller_impl.hpp  server-talos.cpp  server-talossqp.cpp  talos-oh.cpp  talos-oh.hh  talos-oh2sot.cpp  talos-oh2sot.hh  talos-oh2sqp.cpp  talos-oh2sqp.hh
